gurps4e.css
/* ... */
.location-nose {
	grid-column: 14 / 16;
	grid-row: 3 / 6;
	background-color: #C5D9F1;
}

.location-jaw {
	grid-column: 11 / 19;
	grid-row: 6 / 8;
	background-color: #538DD5;
}

.location-neck {
	grid-column: 13 / 17;
	grid-row: 8 / 10;
	background-color: #31869B;
}

.location-wing-shoulder-left {
	grid-column: 6 / 10;
	grid-row: 8 / 10;
	background-color: #ffeeee;
}

.location-wing-shoulder-right {
	grid-column: 20 / 24;
	grid-row: 8 / 10;
	background-color: #ffeeee;
}

.location-upper-wing-left {
	grid-column: 5 / 9;
	grid-row: 6 / 8;
	background-color: #ffffff;
}

.location-upper-wing-right {
	grid-column: 21 / 25;
	grid-row: 6 / 8;
	background-color: #ffffff;
}

.location-wing-elbow-left {
	grid-column: 4 / 8;
	grid-row: 4 / 6;
	background-color: #efeeff;
}

.location-wing-elbow-right {
	grid-column: 22 / 26;
	grid-row: 4 / 6;
	background-color: #efeeff;
}

.location-forewing-left {
	grid-column: 3 / 7;
	grid-row: 2 / 4;
	background-color: #ffffff;
}

.location-forewing-right {
	grid-column: 23 / 27;
	grid-row: 2 / 4;
	background-color: #ffffff;
}

.location-shoulder-left {
	grid-column: 6 / 10;
	grid-row: 10 / 13;
	z-index: 1;
	background-color: #76933C;
}

.location-shoulder-right {
	grid-column: 20 / 24;
	grid-row: 10 / 13;
	z-index: 1;
	background-color: #76933C;
}

.location-upper-arm-left {
	grid-column: 5 / 8;
	grid-row: 13 / 16;
	background-color: #C4D79B;
}

.location-upper-arm-right {
	grid-column: 22 / 25;
	grid-row: 13 / 16;
	z-index: 1;
	background-color: #C4D79B;
}

.location-elbow-left {
	grid-column: 4 / 7;
	grid-row: 16 / 18;
	background-color: #4F6228;
	color: blanchedalmond;
}

.location-elbow-right {
	grid-column: 23 / 26;
	grid-row: 16 / 18;
	z-index: 1;
	background-color: #4F6228;
	color: blanchedalmond;
}

.location-forearm-left {
	grid-column: 3 / 6;
	grid-row: 18 / 21;
	background-color: #EBF1DE;
}

.location-forearm-right {
	grid-column: 24 / 27;
	grid-row: 18 / 21;
	z-index: 1;
	background-color: #EBF1DE;
}

.location-wrist-left {
	grid-column: 2 / 5;
	grid-row: 21 / 22;
	background-color: #E4DFEC;
}

.location-wrist-right {
	grid-column: 25 / 28;
	grid-row: 21 / 22;
	z-index: 1;
	background-color: #E4DFEC;
}

.location-hand-left {
	grid-column: 2 / 5;
	grid-row: 22 / 23;
	background-color: #B1A0C7;
}

.location-hand-right {
	grid-column: 25 / 28;
	grid-row: 22 / 23;
	z-index: 1;
	background-color: #B1A0C7;
}

.location-palm-left {
	grid-column: 2 / 5;
	grid-row: 23 / 24;
	background-color: #60497A;
}

.location-palm-right {
	grid-column: 25 / 28;
	grid-row: 23 / 24;
	z-index: 1;
	background-color: #60497A;
}

.location-lower-shoulder-left {
	grid-column: 6 / 10;
	grid-row: 21 / 24;
	z-index: 1;
	background-color: #76933c;
}

.location-lower-shoulder-right {
	grid-column: 20 / 24;
	grid-row: 21 / 24;
	z-index: 1;
	background-color: #76933C;
}

.location-lower-upper-arm-left {
	grid-column: 5 / 8;
	grid-row: 24 / 27;
	background-color: #C4D79B;
}

.location-lower-upper-arm-right {
	grid-column: 22 / 25;
	grid-row: 24 / 27;
	background-color: #C4D79B;
}

.location-lower-elbow-left {
	grid-column: 4 / 7;
	grid-row: 27 / 29;
	background-color: #4F6228;
	color: blanchedalmond;
}

.location-lower-elbow-right {
	grid-column: 23 / 26;
	grid-row: 27 / 29;
	background-color: #4F6228;
	color: blanchedalmond;
}

.location-lower-forearm-left {
	grid-column: 3 / 6;
	grid-row: 29 / 32;
	background-color: #EBF1DE;
}

.location-lower-forearm-right {
	grid-column: 24 / 27;
	grid-row: 29 / 32;
	background-color: #EBF1DE;
}

.location-lower-wrist-left {
	grid-column: 2 / 5;
	grid-row: 32 / 33;
	background-color: #E4DFEC;
}

.location-lower-wrist-right {
	grid-column: 25 / 28;
	grid-row: 32 / 33;
	background-color: #E4DFEC;
}

.location-lower-hand-left {
	grid-column: 2 / 5;
	grid-row: 33 / 34;
	background-color: #B1A0C7;
}

.location-lower-hand-right {
	grid-column: 25 / 28;
	grid-row: 33 / 34;
	background-color: #B1A0C7;
}

.location-lower-palm-left {
	grid-column: 2 / 5;
	grid-row: 34 / 35;
	background-color: #60497A;
}

.location-lower-palm-right {
	grid-column: 25 / 28;
	grid-row: 34 / 35;
	background-color: #60497A;
}

.location-torso {
	grid-column: 9 / 21;
	grid-row: 10 / 18;
	background-color: #FDE9D9;
}

.location-torso-spine {
	grid-column: 14 / 16;
	grid-row: 12 / 18;
	background-color: #bebebe;
}

.location-torso-vitals {
	grid-column: 13 / 17;
	grid-row: 16 / 18;
	z-index: 1;
	background-color: #FF0000;
}

.location-abdomen-vitals {
	grid-column: 13 / 17;
	grid-row: 18 / 20;
	z-index: 1;
	background-color: #FF0000;
}

.location-digestive {
	grid-column: 9 / 21;
	grid-row: 18 / 22;
	background-color: #C4BD97;
	text-align: left;
}

.location-pelvis {
	grid-column: 9 / 21;
	grid-row: 22 / 26;
	background-color: #948A54;
}

.location-groin {
	grid-column: 13 / 17;
	grid-row: 24 / 26;
	z-index: 1;
	background-color: #494529;
	color: blanchedalmond;
}

.location-thigh-left {
	grid-column: 9 / 13;
	grid-row: 26 / 30;
	background-color: #DA9694;
}

.location-thigh-right {
	grid-column: 17 / 21;
	grid-row: 26 / 30;
	background-color: #DA9694;
}

.location-thigh-artery-left {
	grid-column: 10 / 12;
	grid-row: 27 / 30;
	z-index: 1;
	background-color: #bb5b58;
}

.location-thigh-artery-right {
	grid-column: 18 / 20;
	grid-row: 27 / 30;
	z-index: 1;
	background-color: #bb5b58;
}

.location-knee-left {
	grid-column: 9 / 13;
	grid-row: 30 / 32;
	background-color: #963634;
}

.location-knee-right {
	grid-column: 17 / 21;
	grid-row: 30 / 32;
	background-color: #963634;
}

.location-shin-left {
	grid-column: 9 / 13;
	grid-row: 32 / 36;
	background-color: #F2DCDB;
}

.location-shin-right {
	grid-column: 17 / 21;
	grid-row: 32 / 36;
	background-color: #F2DCDB;
}

.location-ankle-left {
	grid-column: 9 / 13;
	grid-row: 36 / 37;
	background-color: #E4DFEC;
}

.location-ankle-right {
	grid-column: 17 / 21;
	grid-row: 36 / 37;
	background-color: #E4DFEC;
}

.location-foot-left {
	grid-column: 9 / 13;
	grid-row: 37 / 38;
	background-color: #B1A0C7;
}
/* ... */

